--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,5 @@
-SITE_KEY=6Ldyo2IgAAAAAEEcxUwCl_Lc0VZDVD0iO59H9YvS
-SECRET_KEY=6Ldyo2IgAAAAAH3z4Zp9mBJY-DDJK29BwjYeZ8q7
+RECAPTCHA_SITE_KEY=6Ldyo2IgAAAAAEEcxUwCl_Lc0VZDVD0iO59H9YvS
+RECAPTCHA_SECRET_KEY=6Ldyo2IgAAAAAH3z4Zp9mBJY-DDJK29BwjYeZ8q7
+TEMPLATE_ID=template_49vc25y
+SITE_ID=service_d40xuyg
+EMAIL=donahueelectric.inc@gmail.com
